fix: footer links invisible on mobile
This resulted in a broken sentence, since linkes were in the middle
of it. The no-mobile class is not used anywhere else on the website
nor the language reference.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,3 @@
-@media only screen and (max-width:600px) {
-  .no-mobile {
-    display: none;
-  }
-}
-
 html {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Liberation Sans, Helvetica Neue, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 }
